exports[`Activity log > should list the last activity log entries #0`] = `
<span
  class="  bg-blue-100 text-blue-800 px-2.5 py-1 rounded-md text-xs "
  data-testid="pill-comp"
  ><span class="translation">UPDATE</span></span
>
`;

exports[`Activity log > should list the last activity log entries #1`] = `
<span class="text-primary-700">editor</span>
`;

exports[`Activity log > should list the last activity log entries #2`] = `
<div class="w-fit" data-testid="flowbite-tooltip-target">
  <div class="space-x-2">
    <span class="translation font-semibold">Updated user</span>:<span
      class="translation"
      >editor (58ada34d299e82674854510e)</span
    >
  </div>
</div>
`;

exports[`Activity log > should list the last activity log entries #3`] = `
<span
  class="  bg-green-100 text-green-800 px-2.5 py-1 rounded-md text-xs "
  data-testid="pill-comp"
  ><span class="translation">CREATE</span></span
>
`;

exports[`Activity log > should list the last activity log entries #4`] = `
<span class="text-primary-700">editor</span>
`;

exports[`Activity log > should list the last activity log entries #5`] = `
<div class="w-fit" data-testid="flowbite-tooltip-target">
  <div class="space-x-2">
    <span class="translation font-semibold"
      >Two-factor authentication secret</span
    >:
  </div>
</div>
`;

exports[`Activity log > should open the detail of an entry #0`] = `
<aside
  class="w-full h-full top-0 right-0 fixed bg-white border-l-2 transition duration-200 ease-in transform md:w-[500px] -translate-x-[-500px]"
>
  <div class="flex flex-col h-full overflow-y-auto">
    <div class="flex p-4 mb-2 text-gray-500">
      <h1 class="text-base font-bold grow">
        <span class="translation uppercase">Activity</span>
      </h1>
      <button type="button" class="justify-end" data-testid="close-sidepanel">
        <span class="sr-only"><span class="translation">Close</span></span
        ><svg
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 20 20"
          fill="currentColor"
          aria-hidden="true"
          data-slot="icon"
          class="w-6"
        >
          <path
            d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
          ></path>
        </svg>
      </button>
    </div>
    <div class="flex-grow p-4 ">
      <div class="flex flex-col">
        <div
          class="flex flex-row justify-between w-full p-5 my-2 rounded-lg bg-gray-50"
        >
          <div class="flex-col">
            <div>
              <span class="translation font-semibold text-primary-700"
                >Updated user</span
              >:
            </div>
            <div>
              <span class="translation">editor (58ada34d299e82674854510e)</span>
            </div>
          </div>
          <span
            class="h-6  bg-blue-100 text-blue-800 px-2.5 py-1 rounded-md text-xs "
            data-testid="pill-comp"
            ><span class="translation">UPDATE</span></span
          >
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full p-5 my-2 border rounded-lg border-gray-50 bg-gray-30"
      >
        <div class="flex flex-col">
          <span class="translation font-semibold">User</span
          ><span class="text-primary-700">editor</span>
        </div>
      </div>
      <div class="flex flex-col flex-grow p-3 rounded-lg max-h-svh h-3/4">
        <span class="translation m-2 font-semibold">Query</span
        ><span
          class="block p-5 mb-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50"
          >{}</span
        ><span class="translation m-2 font-semibold">Body</span
        ><span
          class="block w-full p-3 overflow-auto text-gray-900 border border-gray-300 rounded-lg bg-gray-50 "
          >{"_id":"58ada34d299e82674854510e","username":"editor","__v":0,"role":"editor","groups":[{"_id":"5fda2b675917fe58048a88f4","name":"Activistas"},{"_id":"5fda2b6f5917fe58048a88f6","name":"Asesores
          legales"}],"email":"editor@uwazi.com"}</span
        >
      </div>
    </div>
  </div>
</aside>
`;

exports[`Activity log > should open the detail of an entry #1`] = `
<aside
  class="w-full h-full top-0 right-0 fixed bg-white border-l-2 transition duration-200 ease-in transform md:w-[500px] translate-x-0"
>
  <div class="flex flex-col h-full overflow-y-auto">
    <div class="flex p-4 mb-2 text-gray-500">
      <h1 class="text-base font-bold grow">
        <span class="translation uppercase">Activity</span>
      </h1>
      <button type="button" class="justify-end" data-testid="close-sidepanel">
        <span class="sr-only"><span class="translation">Close</span></span
        ><svg
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 20 20"
          fill="currentColor"
          aria-hidden="true"
          data-slot="icon"
          class="w-6"
        >
          <path
            d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
          ></path>
        </svg>
      </button>
    </div>
    <div class="flex-grow p-4 ">
      <div class="flex flex-col">
        <div
          class="flex flex-row justify-between w-full p-5 my-2 rounded-lg bg-gray-50"
        >
          <div class="flex-col">
            <div>
              <span class="translation font-semibold text-primary-700"
                >Updated user</span
              >:
            </div>
            <div>
              <span class="translation">editor (58ada34d299e82674854510e)</span>
            </div>
          </div>
          <span
            class="h-6  bg-blue-100 text-blue-800 px-2.5 py-1 rounded-md text-xs "
            data-testid="pill-comp"
            ><span class="translation">UPDATE</span></span
          >
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full p-5 my-2 border rounded-lg border-gray-50 bg-gray-30"
      >
        <div class="flex flex-col">
          <span class="translation font-semibold">User</span
          ><span class="text-primary-700">editor</span>
        </div>
      </div>
      <div class="flex flex-col flex-grow p-3 rounded-lg max-h-svh h-3/4">
        <span class="translation m-2 font-semibold">Query</span
        ><span
          class="block p-5 mb-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50"
          >{}</span
        ><span class="translation m-2 font-semibold">Body</span
        ><span
          class="block w-full p-3 overflow-auto text-gray-900 border border-gray-300 rounded-lg bg-gray-50 "
          >{"_id":"58ada34d299e82674854510e","username":"editor","__v":0,"role":"editor","groups":[{"_id":"5fda2b675917fe58048a88f4","name":"Activistas"},{"_id":"5fda2b6f5917fe58048a88f6","name":"Asesores
          legales"}],"email":"editor@uwazi.com"}</span
        >
      </div>
    </div>
  </div>
</aside>
`;
